# Yandex

./: README.md  aapi.tar.bz2  admins.tar.bz2  ads.tar.bz2  alice.tar.bz2  antiadblock.tar.bz2  antirobot.tar.bz2  autocheck.tar.bz2  certs.tar.bz2  ci.tar.bz2  kernel.tar.bz2  smart_devices.tar.bz2
aapi/: .hg.deps  package.json  ya.make
admins/: ya.make
alice/: .arcignore  .clang-format  .gitignore
antiadblock/: ya.make
antirobot/: .clang-tidy  .hg.deps  a.yaml  ya.make
cdn/: README.md  a.yaml  ya.make
ci/: .arcignore  README.md  a.yaml  docker-compose.yml  lombok.config  ya.make
cloud/: ya.make
cloud/analytics/ml/support_tickets_forecast/: .env  pyproject.toml  setup.cfg
cloud/analytics/ml/support_tickets_forecast/notebooks/: support_tickets_sarimax_model.ipynb
cloud/analytics/ml/support_tickets_forecast/scripts/: weekly_sarimax.py
cloud/analytics/ml/support_tickets_forecast/scripts/vh/: weekly_sarimax_workflow.py
cloud/analytics/ml/support_tickets_forecast/src/support_tickets_forecast/: data.py  time_features.py
cloud/analytics/python/lib/clan_tools/: .arcignore  CONTRIBUTING.md  README.md  a.yaml  requirements.txt  setup.cfg  ya.make
cloud/analytics/python/lib/clan_tools/src/clan_tools/data/: __init__.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/data/holidays_in_russia/: __init__.py  parse_raw_data.py  prepared_data.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/data_adapters/: ChartsAdapter.py  ClickHouseAdapter.py  ClickHouseRestAdapter.py  ClickHouseYTAdapter.py  ExecuteQueryAdapter.py  InterFaxAdapter.py  TrackerAdapter.py  WikiAdapter.py  YQLAdapter.py  YTAdapter.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/data_adapters/crm/: CRMHistoricalDataAdapter.py  CRMModelAdapter.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/data_adapters/nile/: NileDataAdapter.py  yql_customs.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/data_model/model/: experiment.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/data_model/tracker/: TrackerTicket.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/datalense/: ChartsDir.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/examples/: README.md
cloud/analytics/python/lib/clan_tools/src/clan_tools/logging/: logger.py  logger.yml
cloud/analytics/python/lib/clan_tools/src/clan_tools/math/: pw_linear_approximator.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/secrets/: Vault.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/utils/: archive.py  cache.py  conf.py  csv.py  dict.py  json.py  multimethod.py  path.py  spark.py  time.py  timing.py  token.py  transfer_manager.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/utils/sql_templates/: chyt.py
cloud/analytics/python/lib/clan_tools/src/clan_tools/utils/yql/: tables.sql  time.sql
cloud/analytics/python/lib/clan_tools/src/clan_tools/utils/yql/crm/: crm_leads_history.sql
cloud/analytics/python/lib/clan_tools/src/clan_tools/vh/: operations.py  porto.py  workflow.py
cloud/netinfra/fs_flows/: flows.j2  flows.py  pyproject.toml
cloud/netinfra/sflow_yt/: main_update_netbox_only.py  netbox.py  pyproject.toml  ytit.py
cloud/netinfra/vlantoggler/: pyproject.toml  run.py  ya.make
cloud/netinfra/vlantoggler/app/: __init__.py  api.py  forms.py  netbox_helper.py  views.py  vlantoggler.py
cloud/netinfra/vlantoggler/app/templates/: base.html  huawei_intf_edit.j2  huawei_intf_get.j2  index.html
config/: README.md  ya.make
gencfg/: Makefile  README.md  aux_utils.py  build.sh  build_cython.py  checker  checkout.sh  cleanup_txt.sh  cmd_ssd_size  commit.sh  config.py  dump_hostsdata.sh  evaluate.sh  fix_dump.sh  gen.sh  gencfg.py  gencfg0.py  group_by_sum.awk  hosts_to_reserve.sh  info.sh  install.sh  ipython.sh  make_gencfg_bin_utils_resource.py  merge.sh  old_evaluation.sh  pip.reqs.txt  preorder.sh  (+13 more)
(+67343 files in other folders)
