[tool.poetry]
name = "fs_flows"
version = "0.1.0"
description = ""
authors = ["horseinthesky <pwnedbyspawn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pynetbox = "^4.0"
requests = "^2.21"
ncclient = "^0.6.4"
jinja2 = "^2.10"
python-decouple = "^3.1"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
