[tool.poetry]
name = "sflow_yt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
yql = "^1.2.94"
yandex-yt = "^0.9.26"
yandex-yt-yson-bindings = "^0.3.31"

[tool.poetry.dev-dependencies]
pynetbox = "^4.0"
asyncio = "^3.4"
aiohttp = "^3.5"
jupyter = "^1.0"
pylint = "^2.3"

[[tool.poetry.source]]
name = "yandex"
url = "https://pypi.yandex-team.ru/simple/"
secondary = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

