[tool.poetry]
name = "vlantoggler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.1"
Flask-Bootstrap = "^3.3"
flask-restful = "^0.3.7"
flask-wtf = "^0.14.2"
pynetbox = "^4.0"
ncclient = "^0.6.6"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
