[metadata]
name = support-tickets-forecast
version = 0.0.1
author = cloud_analytics
license = Yandex Cloud Analytics Group
description = Forecast of support tickets amount
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    mypy
    flake8

[options.packages.find]
where = src

[mypy]
no_incremental = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_any_generics = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
allow_untyped_decorators = True

[flake8]
max_line_length = 160
select = E,W,F,C9,N8
ignore = E122,E123,E127,E131,E203,E225,E226,E24,E275,E305,E306,E402,E722,E731,E741,F722,W503,W504
