[metadata]
name = clan-tools
version = 0.1.4
author = cloud_analytics
license = Yandex Cloud Analytics Group
description = Working tools for cloud_analytics group
long_description = file: README.md
long_description_content_type = text/markdown
url = https://a.yandex-team.ru/arc/trunk/arcadia/cloud/analytics/python/lib/clan_tools/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    startrek-client
    yandex-yt
    nile
    pandas
    orjson
    yandex-passport-vault-client
    yandex-tracker-client
    yql
    mypy
    flake8

[options.package_data]
* = *.csv, *.yml, *.sql

[options.packages.find]
where = src

[mypy]
no_incremental = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_any_generics = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
allow_untyped_decorators = True

[flake8]
max_line_length = 160
select = E,W,F,C9,N8
ignore = E122,E123,E127,E131,E203,E225,E226,E24,E275,E305,E306,E402,E722,E731,E741,F722,W503,W504
